# nouveau-realsense

./: .gitignore
fichiers-windows/: documentation.txt  hello-realsense.cpp
projet-clion/: CMakeLists.txt
projet-clion-windows/: CMakeLists.txt
projet-clion/libraries/: libusb-1.0.0.dylib
projet-vs-windows/projet-vs-windows/: projet-vs-windows.sln
projet-vs-windows/projet-vs-windows/projet-vs-windows/: projet-vs-windows.vcxproj
projet-xcode/projet-xcode/: rs-capture.cpp  rs-hello-realsense.cpp
projet-xcode/projet-xcode.xcodeproj/: project.pbxproj
projet-xcode/projet-xcode/include/: example.hpp
